welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: ';' expected but 'else' found.
	 else return 0}
         ^